<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bottle Recycler</string>
    <string name="action_settings">Settings</string>
    <string name="txt_count">0000</string>
    <string name="txt_denom">$0.00</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_voice">Voice Input</string>
    <string name="btn_add">Add to Total</string>
    <string name="btn_history">History</string>
    <string name="btn_return">Cash In</string>
    <string name="_0_02d">$ 0.%02d</string>
    <string name="lbl_totalvalue">$ Value</string>
    <string name="lbl_totalCount">Total #</string>
    <string name="lbl_Counter">Bottle Counter</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_title">Date</string>
    <string name="total_title">Total #</string>
    <string name="value_title">Value</string>

</resources>
